--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -31,11 +31,6 @@
 @code {
     [CascadingParameter] public OverviewModel OverviewModel { get; set; }
 
-    [Parameter] public IEnumerable<SeasonDriver> SeasonDrivers { get; set; } = Enumerable.Empty<SeasonDriver>();
-    [Parameter] public IEnumerable<SeasonTeam> SeasonTeams { get; set; } = Enumerable.Empty<SeasonTeam>();
-    [Parameter] public IEnumerable<Race> Races { get; set; } = Enumerable.Empty<Race>();
-    [Parameter] public IEnumerable<Result> Results { get; set; } = Enumerable.Empty<Result>();
-
     List<StandingDriverModel> driverResultsModel = new();
     List<StandingTeamModel> teamResultsModel = new();
     Dictionary<int, Country> countryRounds = new();
@@ -46,31 +41,33 @@
         driverResultsModel.Clear();
         teamResultsModel.Clear();
 
-        foreach (var round in Races.OrderBy(e => e.Round))
+        var classResults = OverviewModel.ClassResults();
+
+        foreach (var round in OverviewModel.Races.OrderBy(e => e.Round))
             countryRounds.Add(round.Round, round.Track?.Country ?? Constants.DefaultCountry);
 
         int indexer = 0;
 
-        driverResultsModel = SeasonDrivers
+        driverResultsModel = OverviewModel.ClassDrivers()
             .OrderByDescending(e => e.Points)
                 .ThenByDescending(e => e.HiddenPoints)
             .Select(e =>
-                ToDriverResultModel(e, Results.Where(r => r.SeasonDriverId == e.Id).ToList(), ++indexer))
+                ToDriverResultModel(e, classResults.Where(r => r.SeasonDriverId == e.Id).ToList(), ++indexer))
             .ToList();
 
         indexer = 0;
 
-        teamResultsModel = SeasonTeams
+        teamResultsModel = OverviewModel.ClassTeams()
             .OrderByDescending(e => e.Points)
                 .ThenByDescending(e => e.HiddenPoints)
             .Select(e =>
-                ToTeamResultModel(e, Results.Where(r => r.SeasonTeamId == e.Id).ToList(), ++indexer))
+                ToTeamResultModel(e, classResults.Where(r => r.SeasonTeamId == e.Id).ToList(), ++indexer))
             .ToList();
     }
 
     private StandingDriverModel ToDriverResultModel(SeasonDriver driver, List<Result> results, int position)
     {
-        var team = SeasonTeams.FirstOrDefault(e => e.Id == driver.SeasonTeamId);
+        var team = OverviewModel.SeasonTeams.FirstOrDefault(e => e.Id == driver.SeasonTeamId);
         return new StandingDriverModel
             {
                 Id = driver.Id,
@@ -115,7 +112,7 @@
             {
                 Position = result.Position,
                 Status = result.Status,
-                Round = Races.Single(e => e.Id == result.RaceId).Round,
+                Round = OverviewModel.Races.Single(e => e.Id == result.RaceId).Round,
                 Pole = result.Grid == 1,
                 FL = result.FastestLap,
             };
