managed to implement a nice position result list

--- a/SimTECH/SimTECH/Pages/Season/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Season/Landing.razor
@@ -113,7 +113,7 @@
                                    SelectedOptionChanged="OnClassSelected">
                         @foreach (var raceClass in OverviewModel.Season.RaceClasses)
                         {
-                            <MudRadio Option="@raceClass.Id">@raceClass.Name</MudRadio>
+                            <MudRadio Option="@raceClass.Id" Color="Color.Primary" UnCheckedColor="Color.Default">@raceClass.Name</MudRadio>
                         }
                     </MudRadioGroup>
                 }
